[package]

name = "unicase"
version = "2.1.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
description = "A case-insensitive wrapper around strings."
repository = "https://github.com/seanmonstar/unicase"
license = "MIT/Apache-2.0"
keywords = ["lowercase", "case", "case-insensitive"]

exclude = [
    "scripts/"
]

build = "build.rs"

[build-dependencies]
version_check = "0.1"

[features]
nightly = []
