[package]

name = "unicase"
version = "2.4.0" # don't forget to update html_root_url
authors = ["Sean McArthur <sean@seanmonstar.com>"]
description = "A case-insensitive wrapper around strings."
repository = "https://github.com/seanmonstar/unicase"
documentation = "https://docs.rs/unicase"
license = "MIT/Apache-2.0"
keywords = ["lowercase", "case", "case-insensitive", "case-folding"]

exclude = [
    "scripts/*"
]

build = "build.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.22", optional = true }

[build-dependencies]
version_check = "0.1"

[features]
# When compiling for WASM, by default this library uses JS string comparisons to reduce size.
# If you want to use pure-Rust string comparisons instead you can disable this feature.
default = ["js-sys"]
nightly = []
