[package]

name = "unicase"
version = "2.7.0" # don't forget to update html_root_url
authors = ["Sean McArthur <sean@seanmonstar.com>"]
description = "A case-insensitive wrapper around strings."
repository = "https://github.com/seanmonstar/unicase"
documentation = "https://docs.rs/unicase"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lowercase", "case", "case-insensitive", "case-folding", "no_std"]
categories = ["internationalization", "text-processing", "no-std"]

exclude = [
    "scripts/*"
]

build = "build.rs"

[build-dependencies]
version_check = "0.9"

[features]
nightly = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.210", optional = true }

[dev-dependencies]
serde_json = "1.0.128"
